# AIPowerGame

./: .gitignore  README.md  pyproject.toml
configs/: baseline.toml
docs/: 7天启动计划_电力市场交易赛道.md  AI接力提示词.md  山东业务访谈提纲.md  待确认问题清单.md  给项目经理的首次对齐提纲.md  长期记忆_电力市场交易赛道.md
src/ai4s_power_market/: __init__.py  backtest.py  cli.py  config.py  data.py  features.py  logging_utils.py  modeling.py  storage.py
src/ai4s_power_market.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
