[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4s-power-market"
version = "0.1.0"
description = "Baseline scaffold for the AI4S electricity market trading track."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]
lightgbm = ["lightgbm>=4.5"]

[project.scripts]
ai4s-power-market = "ai4s_power_market.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
